# SPDX-FileCopyrightText: 2021 Fraunhofer Institute for Experimental Software Engineering IESE
#
# SPDX-License-Identifier: EPL-2.0

[package]
name = "basyx-rs"
version = "0.1.0"
authors = [
    "Daniel Hillen <daniel.hillen@iese.fraunhofer.de>",
    "Andreas Schmidt <andreas.schmidt@iese.fraunhofer.de>"
]
description = "A Rust library to work with Asset Administration Shells."
edition = "2018"
rust-version = "1.54.0"
homepage = "https://github.com/eclipse-basyx/rust-sdk"
documentation = "https://docs.rs/basyx-rs/"
readme = "README.md"
keywords = ["aas", "basyx", "serde"]
license = "EPL-2.0"
repository = "https://github.com/eclipse-basyx/rust-sdk"

[[bin]]
name = "aascheck"
path = "src/bin/aascheck.rs"
test = false
bench = false

[dependencies]
clap = { version = "3.0.0-beta.5", optional = true }
color-eyre = { version = "0.5.11", default-features = false }
colored = "2.0.0"
jsonschema = { version = "=0.13.2", default-features = false }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
thiserror = "1.0.30"

[features]
default = ["clap"]
explorer = []
